src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__pointer_binary_expression_division.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error: Operator '/' unimplemented for pointers
  ┌─ <internal>:8:10
  │
8 │     ptr := ptr / ptr;
  │            ^^^^^^^^^ Operator '/' unimplemented for pointers


